@@ -9,6 +9,7 @@ Bugfixes
 --------
 - trust_anchors.set_insecure: improve precision (#673, !1177)
 - plug memory leaks related to TCP (!1182)
+- policy.FLAGS: fix not applying properly in edge cases (!1179)
 
 Incompatible changes
 --------------------
